extra/y.output
   0  $accept : program $end

   1  program : program func
   2          | func

   3  func : func_method
   4       | func_class
   5       | error

   6  $$1 :

   7  $$2 :

   8  func_method : METHOD VOID ID LP_BRACE RP_BRACE $$1 LC_BRACE body $$2 RC_BRACE

   9  $$3 :

  10  $$4 :

  11  func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE

  12  args : args COMMA arg
  13       | arg

  14  arg : RETURN_TYPE_FUNC ID
  15      | VOID ID

  16  $$5 :

  17  func_class : CLASS ID LP_BRACE RP_BRACE $$5 LC_BRACE body_class RC_BRACE

  18  $$6 :

  19  func_class : CLASS ID LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 LC_BRACE body_class_methods RC_BRACE

  20  body : body_method

  21  body_method : body_method rest
  22              | rest

  23  rest : LC_BRACE body_method RC_BRACE
  24       | rest_m
  25       | LC_BRACE RC_BRACE

  26  rest_m : decls
  27         | stmts
  28         | exp_call
  29         | calls
  30         | return_stmt
  31         | return_stmt_void

  32  body_class : body_class rest_class
  33             | rest_class

  34  rest_class : decls

  35  body_class_methods : body_class_methods rest_class_methods
  36                     | rest_class_methods

  37  rest_class_methods : decls
  38                     | func_method

  39  return_stmt_void : RETURN VOID SEMICOLON

  40  return_stmt : RETURN predicate SEMICOLON

  41  stmts : loops
  42        | cond_stmts
  43        | unary_call

  44  $$7 :

  45  loops : LOOP WHILE LP_BRACE predicate RP_BRACE $$7 DO LC_BRACE body RC_BRACE

  46  $$8 :

  47  loops : FOR LP_BRACE exp_stmt SEMICOLON predicate SEMICOLON unary_stmts RP_BRACE $$8 LC_BRACE body RC_BRACE

  48  $$9 :

  49  loops : FOR LP_BRACE exp_stmt SEMICOLON predicate SEMICOLON RP_BRACE $$9 LC_BRACE body RC_BRACE

  50  cond_stmts : if_stmt otherwise_stmt
  51             | if_stmt

  52  $$10 :

  53  if_stmt : IF LP_BRACE predicate RP_BRACE $$10 DO LC_BRACE body RC_BRACE

  54  $$11 :

  55  otherwise_stmt : ELSE $$11 LC_BRACE body RC_BRACE

  56  decls : DECLARATION RETURN_TYPE_FUNC dec SEMICOLON
  57        | DECLARATION ID dec SEMICOLON
  58        | error

  59  dec : dec COMMA ID
  60      | ID
  61      | error

  62  exp_call : exp_stmt SEMICOLON

  63  exp_stmt : EXPRESSION ID ASSIGN predicate

  64  calls : call_stmt_obj SEMICOLON
  65        | call_stmt SEMICOLON

  66  call_stmt_obj : CALL_STMT ID CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE predicates RP_BRACE
  67                | CALL_STMT "this" CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE predicates RP_BRACE
  68                | CALL_STMT ID CALL_OP ID LP_BRACE RP_BRACE

  69  predicates : predicates COMMA predicate
  70             | predicate

  71  call_stmt : CALL_STMT ID LP_BRACE RP_BRACE
  72            | CALL_STMT ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE predicates RP_BRACE

  73  unary_call : unary_stmts SEMICOLON

  74  unary_stmts : POSTINCR LP_BRACE extras RP_BRACE
  75              | POSTDECR LP_BRACE extras RP_BRACE

  76  predicate : predicate AND predicate
  77            | predicate OR predicate
  78            | predicate PREDICATE_OP predicate
  79            | LP_BRACE predicate RP_BRACE
  80            | expr_pred
  81            | NEG predicate

  82  expr_pred : arth_pred
  83            | call_stmt
  84            | call_stmt_obj

  85  arth_pred : ADD LP_BRACE expr_pred COMMA expr_pred RP_BRACE
  86            | SUB LP_BRACE expr_pred COMMA expr_pred RP_BRACE
  87            | MUL LP_BRACE expr_pred COMMA expr_pred RP_BRACE
  88            | DIV LP_BRACE expr_pred COMMA expr_pred RP_BRACE
  89            | extras

  90  extras : unary_stmts
  91         | ID
  92         | INTEGERS
  93         | ARGUMENTS
  94         | extrazz

  95  extrazz : TRUE_KEY
  96          | FALSE_KEY
  97          | STRING_TOKEN
  98          | CHAR_TOKEN

state 0
	$accept : . program $end  (0)

	error  shift 1
	CLASS  shift 2
	METHOD  shift 3
	.  error

	program  goto 4
	func  goto 5
	func_method  goto 6
	func_class  goto 7


state 1
	func : error .  (5)

	.  reduce 5


state 2
	func_class : CLASS . ID LP_BRACE RP_BRACE $$5 LC_BRACE body_class RC_BRACE  (17)
	func_class : CLASS . ID LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 LC_BRACE body_class_methods RC_BRACE  (19)

	ID  shift 8
	.  error


state 3
	func_method : METHOD . VOID ID LP_BRACE RP_BRACE $$1 LC_BRACE body $$2 RC_BRACE  (8)
	func_method : METHOD . RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (11)

	RETURN_TYPE_FUNC  shift 9
	VOID  shift 10
	.  error


state 4
	$accept : program . $end  (0)
	program : program . func  (1)

	$end  accept
	error  shift 1
	CLASS  shift 2
	METHOD  shift 3
	.  error

	func  goto 11
	func_method  goto 6
	func_class  goto 7


state 5
	program : func .  (2)

	.  reduce 2


state 6
	func : func_method .  (3)

	.  reduce 3


state 7
	func : func_class .  (4)

	.  reduce 4


state 8
	func_class : CLASS ID . LP_BRACE RP_BRACE $$5 LC_BRACE body_class RC_BRACE  (17)
	func_class : CLASS ID . LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 LC_BRACE body_class_methods RC_BRACE  (19)

	LP_BRACE  shift 12
	LSQ_BRACE  shift 13
	.  error


state 9
	func_method : METHOD RETURN_TYPE_FUNC . ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (11)

	ID  shift 14
	.  error


state 10
	func_method : METHOD VOID . ID LP_BRACE RP_BRACE $$1 LC_BRACE body $$2 RC_BRACE  (8)

	ID  shift 15
	.  error


state 11
	program : program func .  (1)

	.  reduce 1


state 12
	func_class : CLASS ID LP_BRACE . RP_BRACE $$5 LC_BRACE body_class RC_BRACE  (17)

	RP_BRACE  shift 16
	.  error


state 13
	func_class : CLASS ID LSQ_BRACE . ARGUMENTS RSQ_BRACE $$6 LC_BRACE body_class_methods RC_BRACE  (19)

	ARGUMENTS  shift 17
	.  error


state 14
	func_method : METHOD RETURN_TYPE_FUNC ID . LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (11)

	LSQ_BRACE  shift 18
	.  error


state 15
	func_method : METHOD VOID ID . LP_BRACE RP_BRACE $$1 LC_BRACE body $$2 RC_BRACE  (8)

	LP_BRACE  shift 19
	.  error


state 16
	func_class : CLASS ID LP_BRACE RP_BRACE . $$5 LC_BRACE body_class RC_BRACE  (17)
	$$5 : .  (16)

	.  reduce 16

	$$5  goto 20


state 17
	func_class : CLASS ID LSQ_BRACE ARGUMENTS . RSQ_BRACE $$6 LC_BRACE body_class_methods RC_BRACE  (19)

	RSQ_BRACE  shift 21
	.  error


state 18
	func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE . ARGUMENTS RSQ_BRACE LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (11)

	ARGUMENTS  shift 22
	.  error


state 19
	func_method : METHOD VOID ID LP_BRACE . RP_BRACE $$1 LC_BRACE body $$2 RC_BRACE  (8)

	RP_BRACE  shift 23
	.  error


state 20
	func_class : CLASS ID LP_BRACE RP_BRACE $$5 . LC_BRACE body_class RC_BRACE  (17)

	LC_BRACE  shift 24
	.  error


state 21
	func_class : CLASS ID LSQ_BRACE ARGUMENTS RSQ_BRACE . $$6 LC_BRACE body_class_methods RC_BRACE  (19)
	$$6 : .  (18)

	.  reduce 18

	$$6  goto 25


state 22
	func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS . RSQ_BRACE LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (11)

	RSQ_BRACE  shift 26
	.  error


state 23
	func_method : METHOD VOID ID LP_BRACE RP_BRACE . $$1 LC_BRACE body $$2 RC_BRACE  (8)
	$$1 : .  (6)

	.  reduce 6

	$$1  goto 27


state 24
	func_class : CLASS ID LP_BRACE RP_BRACE $$5 LC_BRACE . body_class RC_BRACE  (17)

	error  shift 28
	DECLARATION  shift 29
	.  error

	body_class  goto 30
	decls  goto 31
	rest_class  goto 32


state 25
	func_class : CLASS ID LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 . LC_BRACE body_class_methods RC_BRACE  (19)

	LC_BRACE  shift 33
	.  error


state 26
	func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS RSQ_BRACE . LP_BRACE args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (11)

	LP_BRACE  shift 34
	.  error


state 27
	func_method : METHOD VOID ID LP_BRACE RP_BRACE $$1 . LC_BRACE body $$2 RC_BRACE  (8)

	LC_BRACE  shift 35
	.  error


state 28
	decls : error .  (58)

	.  reduce 58


state 29
	decls : DECLARATION . RETURN_TYPE_FUNC dec SEMICOLON  (56)
	decls : DECLARATION . ID dec SEMICOLON  (57)

	RETURN_TYPE_FUNC  shift 36
	ID  shift 37
	.  error


state 30
	func_class : CLASS ID LP_BRACE RP_BRACE $$5 LC_BRACE body_class . RC_BRACE  (17)
	body_class : body_class . rest_class  (32)

	error  shift 28
	RC_BRACE  shift 38
	DECLARATION  shift 29
	.  error

	decls  goto 31
	rest_class  goto 39


state 31
	rest_class : decls .  (34)

	.  reduce 34


state 32
	body_class : rest_class .  (33)

	.  reduce 33


state 33
	func_class : CLASS ID LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 LC_BRACE . body_class_methods RC_BRACE  (19)

	error  shift 28
	METHOD  shift 3
	DECLARATION  shift 29
	.  error

	func_method  goto 40
	body_class_methods  goto 41
	decls  goto 42
	rest_class_methods  goto 43


state 34
	func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE . args RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (11)

	RETURN_TYPE_FUNC  shift 44
	VOID  shift 45
	.  error

	args  goto 46
	arg  goto 47


state 35
	func_method : METHOD VOID ID LP_BRACE RP_BRACE $$1 LC_BRACE . body $$2 RC_BRACE  (8)

	error  shift 28
	IF  shift 48
	FOR  shift 49
	DECLARATION  shift 29
	EXPRESSION  shift 50
	CALL_STMT  shift 51
	RETURN  shift 52
	LC_BRACE  shift 53
	LOOP  shift 54
	POSTINCR  shift 55
	POSTDECR  shift 56
	.  error

	body  goto 57
	body_method  goto 58
	rest  goto 59
	rest_m  goto 60
	decls  goto 61
	stmts  goto 62
	exp_call  goto 63
	calls  goto 64
	return_stmt  goto 65
	return_stmt_void  goto 66
	loops  goto 67
	cond_stmts  goto 68
	unary_call  goto 69
	exp_stmt  goto 70
	unary_stmts  goto 71
	if_stmt  goto 72
	call_stmt_obj  goto 73
	call_stmt  goto 74


state 36
	decls : DECLARATION RETURN_TYPE_FUNC . dec SEMICOLON  (56)

	error  shift 75
	ID  shift 76
	.  error

	dec  goto 77


state 37
	decls : DECLARATION ID . dec SEMICOLON  (57)

	error  shift 75
	ID  shift 76
	.  error

	dec  goto 78


state 38
	func_class : CLASS ID LP_BRACE RP_BRACE $$5 LC_BRACE body_class RC_BRACE .  (17)

	.  reduce 17


state 39
	body_class : body_class rest_class .  (32)

	.  reduce 32


state 40
	rest_class_methods : func_method .  (38)

	.  reduce 38


state 41
	func_class : CLASS ID LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 LC_BRACE body_class_methods . RC_BRACE  (19)
	body_class_methods : body_class_methods . rest_class_methods  (35)

	error  shift 28
	RC_BRACE  shift 79
	METHOD  shift 3
	DECLARATION  shift 29
	.  error

	func_method  goto 40
	decls  goto 42
	rest_class_methods  goto 80


state 42
	rest_class_methods : decls .  (37)

	.  reduce 37


state 43
	body_class_methods : rest_class_methods .  (36)

	.  reduce 36


state 44
	arg : RETURN_TYPE_FUNC . ID  (14)

	ID  shift 81
	.  error


state 45
	arg : VOID . ID  (15)

	ID  shift 82
	.  error


state 46
	func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE args . RP_BRACE $$3 LC_BRACE body $$4 RC_BRACE  (11)
	args : args . COMMA arg  (12)

	RP_BRACE  shift 83
	COMMA  shift 84
	.  error


state 47
	args : arg .  (13)

	.  reduce 13


state 48
	if_stmt : IF . LP_BRACE predicate RP_BRACE $$10 DO LC_BRACE body RC_BRACE  (53)

	LP_BRACE  shift 85
	.  error


state 49
	loops : FOR . LP_BRACE exp_stmt SEMICOLON predicate SEMICOLON unary_stmts RP_BRACE $$8 LC_BRACE body RC_BRACE  (47)
	loops : FOR . LP_BRACE exp_stmt SEMICOLON predicate SEMICOLON RP_BRACE $$9 LC_BRACE body RC_BRACE  (49)

	LP_BRACE  shift 86
	.  error


state 50
	exp_stmt : EXPRESSION . ID ASSIGN predicate  (63)

	ID  shift 87
	.  error


state 51
	call_stmt_obj : CALL_STMT . ID CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE predicates RP_BRACE  (66)
	call_stmt_obj : CALL_STMT . "this" CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE predicates RP_BRACE  (67)
	call_stmt_obj : CALL_STMT . ID CALL_OP ID LP_BRACE RP_BRACE  (68)
	call_stmt : CALL_STMT . ID LP_BRACE RP_BRACE  (71)
	call_stmt : CALL_STMT . ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE predicates RP_BRACE  (72)

	ID  shift 88
	"this"  shift 89
	.  error


state 52
	return_stmt_void : RETURN . VOID SEMICOLON  (39)
	return_stmt : RETURN . predicate SEMICOLON  (40)

	CALL_STMT  shift 51
	LP_BRACE  shift 90
	NEG  shift 91
	ADD  shift 92
	SUB  shift 93
	MUL  shift 94
	DIV  shift 95
	POSTINCR  shift 55
	POSTDECR  shift 56
	INTEGERS  shift 96
	ID  shift 97
	VOID  shift 98
	ARGUMENTS  shift 99
	TRUE_KEY  shift 100
	FALSE_KEY  shift 101
	STRING_TOKEN  shift 102
	CHAR_TOKEN  shift 103
	.  error

	predicate  goto 104
	unary_stmts  goto 105
	call_stmt_obj  goto 106
	call_stmt  goto 107
	extras  goto 108
	expr_pred  goto 109
	arth_pred  goto 110
	extrazz  goto 111


state 53
	rest : LC_BRACE . body_method RC_BRACE  (23)
	rest : LC_BRACE . RC_BRACE  (25)

	error  shift 28
	RC_BRACE  shift 112
	IF  shift 48
	FOR  shift 49
	DECLARATION  shift 29
	EXPRESSION  shift 50
	CALL_STMT  shift 51
	RETURN  shift 52
	LC_BRACE  shift 53
	LOOP  shift 54
	POSTINCR  shift 55
	POSTDECR  shift 56
	.  error

	body_method  goto 113
	rest  goto 59
	rest_m  goto 60
	decls  goto 61
	stmts  goto 62
	exp_call  goto 63
	calls  goto 64
	return_stmt  goto 65
	return_stmt_void  goto 66
	loops  goto 67
	cond_stmts  goto 68
	unary_call  goto 69
	exp_stmt  goto 70
	unary_stmts  goto 71
	if_stmt  goto 72
	call_stmt_obj  goto 73
	call_stmt  goto 74


state 54
	loops : LOOP . WHILE LP_BRACE predicate RP_BRACE $$7 DO LC_BRACE body RC_BRACE  (45)

	WHILE  shift 114
	.  error


state 55
	unary_stmts : POSTINCR . LP_BRACE extras RP_BRACE  (74)

	LP_BRACE  shift 115
	.  error


state 56
	unary_stmts : POSTDECR . LP_BRACE extras RP_BRACE  (75)

	LP_BRACE  shift 116
	.  error


state 57
	func_method : METHOD VOID ID LP_BRACE RP_BRACE $$1 LC_BRACE body . $$2 RC_BRACE  (8)
	$$2 : .  (7)

	.  reduce 7

	$$2  goto 117


state 58
	body : body_method .  (20)
	body_method : body_method . rest  (21)

	error  shift 28
	IF  shift 48
	FOR  shift 49
	DECLARATION  shift 29
	EXPRESSION  shift 50
	CALL_STMT  shift 51
	RETURN  shift 52
	LC_BRACE  shift 53
	LOOP  shift 54
	POSTINCR  shift 55
	POSTDECR  shift 56
	RC_BRACE  reduce 20

	rest  goto 118
	rest_m  goto 60
	decls  goto 61
	stmts  goto 62
	exp_call  goto 63
	calls  goto 64
	return_stmt  goto 65
	return_stmt_void  goto 66
	loops  goto 67
	cond_stmts  goto 68
	unary_call  goto 69
	exp_stmt  goto 70
	unary_stmts  goto 71
	if_stmt  goto 72
	call_stmt_obj  goto 73
	call_stmt  goto 74


state 59
	body_method : rest .  (22)

	.  reduce 22


state 60
	rest : rest_m .  (24)

	.  reduce 24


state 61
	rest_m : decls .  (26)

	.  reduce 26


state 62
	rest_m : stmts .  (27)

	.  reduce 27


state 63
	rest_m : exp_call .  (28)

	.  reduce 28


state 64
	rest_m : calls .  (29)

	.  reduce 29


state 65
	rest_m : return_stmt .  (30)

	.  reduce 30


state 66
	rest_m : return_stmt_void .  (31)

	.  reduce 31


state 67
	stmts : loops .  (41)

	.  reduce 41


state 68
	stmts : cond_stmts .  (42)

	.  reduce 42


state 69
	stmts : unary_call .  (43)

	.  reduce 43


state 70
	exp_call : exp_stmt . SEMICOLON  (62)

	SEMICOLON  shift 119
	.  error


state 71
	unary_call : unary_stmts . SEMICOLON  (73)

	SEMICOLON  shift 120
	.  error


state 72
	cond_stmts : if_stmt . otherwise_stmt  (50)
	cond_stmts : if_stmt .  (51)

	ELSE  shift 121
	error  reduce 51
	RC_BRACE  reduce 51
	IF  reduce 51
	FOR  reduce 51
	DECLARATION  reduce 51
	EXPRESSION  reduce 51
	CALL_STMT  reduce 51
	RETURN  reduce 51
	LC_BRACE  reduce 51
	LOOP  reduce 51
	POSTINCR  reduce 51
	POSTDECR  reduce 51

	otherwise_stmt  goto 122


state 73
	calls : call_stmt_obj . SEMICOLON  (64)

	SEMICOLON  shift 123
	.  error


state 74
	calls : call_stmt . SEMICOLON  (65)

	SEMICOLON  shift 124
	.  error


state 75
	dec : error .  (61)

	.  reduce 61


state 76
	dec : ID .  (60)

	.  reduce 60


state 77
	decls : DECLARATION RETURN_TYPE_FUNC dec . SEMICOLON  (56)
	dec : dec . COMMA ID  (59)

	SEMICOLON  shift 125
	COMMA  shift 126
	.  error


state 78
	decls : DECLARATION ID dec . SEMICOLON  (57)
	dec : dec . COMMA ID  (59)

	SEMICOLON  shift 127
	COMMA  shift 126
	.  error


state 79
	func_class : CLASS ID LSQ_BRACE ARGUMENTS RSQ_BRACE $$6 LC_BRACE body_class_methods RC_BRACE .  (19)

	.  reduce 19


state 80
	body_class_methods : body_class_methods rest_class_methods .  (35)

	.  reduce 35


state 81
	arg : RETURN_TYPE_FUNC ID .  (14)

	.  reduce 14


state 82
	arg : VOID ID .  (15)

	.  reduce 15


state 83
	func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE args RP_BRACE . $$3 LC_BRACE body $$4 RC_BRACE  (11)
	$$3 : .  (9)

	.  reduce 9

	$$3  goto 128


state 84
	args : args COMMA . arg  (12)

	RETURN_TYPE_FUNC  shift 44
	VOID  shift 45
	.  error

	arg  goto 129


state 85
	if_stmt : IF LP_BRACE . predicate RP_BRACE $$10 DO LC_BRACE body RC_BRACE  (53)

	CALL_STMT  shift 51
	LP_BRACE  shift 90
	NEG  shift 91
	ADD  shift 92
	SUB  shift 93
	MUL  shift 94
	DIV  shift 95
	POSTINCR  shift 55
	POSTDECR  shift 56
	INTEGERS  shift 96
	ID  shift 97
	ARGUMENTS  shift 99
	TRUE_KEY  shift 100
	FALSE_KEY  shift 101
	STRING_TOKEN  shift 102
	CHAR_TOKEN  shift 103
	.  error

	predicate  goto 130
	unary_stmts  goto 105
	call_stmt_obj  goto 106
	call_stmt  goto 107
	extras  goto 108
	expr_pred  goto 109
	arth_pred  goto 110
	extrazz  goto 111


state 86
	loops : FOR LP_BRACE . exp_stmt SEMICOLON predicate SEMICOLON unary_stmts RP_BRACE $$8 LC_BRACE body RC_BRACE  (47)
	loops : FOR LP_BRACE . exp_stmt SEMICOLON predicate SEMICOLON RP_BRACE $$9 LC_BRACE body RC_BRACE  (49)

	EXPRESSION  shift 50
	.  error

	exp_stmt  goto 131


state 87
	exp_stmt : EXPRESSION ID . ASSIGN predicate  (63)

	ASSIGN  shift 132
	.  error


state 88
	call_stmt_obj : CALL_STMT ID . CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE predicates RP_BRACE  (66)
	call_stmt_obj : CALL_STMT ID . CALL_OP ID LP_BRACE RP_BRACE  (68)
	call_stmt : CALL_STMT ID . LP_BRACE RP_BRACE  (71)
	call_stmt : CALL_STMT ID . LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE predicates RP_BRACE  (72)

	LP_BRACE  shift 133
	CALL_OP  shift 134
	LSQ_BRACE  shift 135
	.  error


state 89
	call_stmt_obj : CALL_STMT "this" . CALL_OP ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE predicates RP_BRACE  (67)

	CALL_OP  shift 136
	.  error


state 90
	predicate : LP_BRACE . predicate RP_BRACE  (79)

	CALL_STMT  shift 51
	LP_BRACE  shift 90
	NEG  shift 91
	ADD  shift 92
	SUB  shift 93
	MUL  shift 94
	DIV  shift 95
	POSTINCR  shift 55
	POSTDECR  shift 56
	INTEGERS  shift 96
	ID  shift 97
	ARGUMENTS  shift 99
	TRUE_KEY  shift 100
	FALSE_KEY  shift 101
	STRING_TOKEN  shift 102
	CHAR_TOKEN  shift 103
	.  error

	predicate  goto 137
	unary_stmts  goto 105
	call_stmt_obj  goto 106
	call_stmt  goto 107
	extras  goto 108
	expr_pred  goto 109
	arth_pred  goto 110
	extrazz  goto 111


state 91
	predicate : NEG . predicate  (81)

	CALL_STMT  shift 51
	LP_BRACE  shift 90
	NEG  shift 91
	ADD  shift 92
	SUB  shift 93
	MUL  shift 94
	DIV  shift 95
	POSTINCR  shift 55
	POSTDECR  shift 56
	INTEGERS  shift 96
	ID  shift 97
	ARGUMENTS  shift 99
	TRUE_KEY  shift 100
	FALSE_KEY  shift 101
	STRING_TOKEN  shift 102
	CHAR_TOKEN  shift 103
	.  error

	predicate  goto 138
	unary_stmts  goto 105
	call_stmt_obj  goto 106
	call_stmt  goto 107
	extras  goto 108
	expr_pred  goto 109
	arth_pred  goto 110
	extrazz  goto 111


state 92
	arth_pred : ADD . LP_BRACE expr_pred COMMA expr_pred RP_BRACE  (85)

	LP_BRACE  shift 139
	.  error


state 93
	arth_pred : SUB . LP_BRACE expr_pred COMMA expr_pred RP_BRACE  (86)

	LP_BRACE  shift 140
	.  error


state 94
	arth_pred : MUL . LP_BRACE expr_pred COMMA expr_pred RP_BRACE  (87)

	LP_BRACE  shift 141
	.  error


state 95
	arth_pred : DIV . LP_BRACE expr_pred COMMA expr_pred RP_BRACE  (88)

	LP_BRACE  shift 142
	.  error


state 96
	extras : INTEGERS .  (92)

	.  reduce 92


state 97
	extras : ID .  (91)

	.  reduce 91


state 98
	return_stmt_void : RETURN VOID . SEMICOLON  (39)

	SEMICOLON  shift 143
	.  error


state 99
	extras : ARGUMENTS .  (93)

	.  reduce 93


state 100
	extrazz : TRUE_KEY .  (95)

	.  reduce 95


state 101
	extrazz : FALSE_KEY .  (96)

	.  reduce 96


state 102
	extrazz : STRING_TOKEN .  (97)

	.  reduce 97


state 103
	extrazz : CHAR_TOKEN .  (98)

	.  reduce 98


state 104
	return_stmt : RETURN predicate . SEMICOLON  (40)
	predicate : predicate . AND predicate  (76)
	predicate : predicate . OR predicate  (77)
	predicate : predicate . PREDICATE_OP predicate  (78)

	SEMICOLON  shift 144
	PREDICATE_OP  shift 145
	AND  shift 146
	OR  shift 147
	.  error


state 105
	extras : unary_stmts .  (90)

	.  reduce 90


state 106
	expr_pred : call_stmt_obj .  (84)

	.  reduce 84


state 107
	expr_pred : call_stmt .  (83)

	.  reduce 83


state 108
	arth_pred : extras .  (89)

	.  reduce 89


state 109
	predicate : expr_pred .  (80)

	.  reduce 80


state 110
	expr_pred : arth_pred .  (82)

	.  reduce 82


state 111
	extras : extrazz .  (94)

	.  reduce 94


state 112
	rest : LC_BRACE RC_BRACE .  (25)

	.  reduce 25


state 113
	body_method : body_method . rest  (21)
	rest : LC_BRACE body_method . RC_BRACE  (23)

	error  shift 28
	RC_BRACE  shift 148
	IF  shift 48
	FOR  shift 49
	DECLARATION  shift 29
	EXPRESSION  shift 50
	CALL_STMT  shift 51
	RETURN  shift 52
	LC_BRACE  shift 53
	LOOP  shift 54
	POSTINCR  shift 55
	POSTDECR  shift 56
	.  error

	rest  goto 118
	rest_m  goto 60
	decls  goto 61
	stmts  goto 62
	exp_call  goto 63
	calls  goto 64
	return_stmt  goto 65
	return_stmt_void  goto 66
	loops  goto 67
	cond_stmts  goto 68
	unary_call  goto 69
	exp_stmt  goto 70
	unary_stmts  goto 71
	if_stmt  goto 72
	call_stmt_obj  goto 73
	call_stmt  goto 74


state 114
	loops : LOOP WHILE . LP_BRACE predicate RP_BRACE $$7 DO LC_BRACE body RC_BRACE  (45)

	LP_BRACE  shift 149
	.  error


state 115
	unary_stmts : POSTINCR LP_BRACE . extras RP_BRACE  (74)

	POSTINCR  shift 55
	POSTDECR  shift 56
	INTEGERS  shift 96
	ID  shift 97
	ARGUMENTS  shift 99
	TRUE_KEY  shift 100
	FALSE_KEY  shift 101
	STRING_TOKEN  shift 102
	CHAR_TOKEN  shift 103
	.  error

	unary_stmts  goto 105
	extras  goto 150
	extrazz  goto 111


state 116
	unary_stmts : POSTDECR LP_BRACE . extras RP_BRACE  (75)

	POSTINCR  shift 55
	POSTDECR  shift 56
	INTEGERS  shift 96
	ID  shift 97
	ARGUMENTS  shift 99
	TRUE_KEY  shift 100
	FALSE_KEY  shift 101
	STRING_TOKEN  shift 102
	CHAR_TOKEN  shift 103
	.  error

	unary_stmts  goto 105
	extras  goto 151
	extrazz  goto 111


state 117
	func_method : METHOD VOID ID LP_BRACE RP_BRACE $$1 LC_BRACE body $$2 . RC_BRACE  (8)

	RC_BRACE  shift 152
	.  error


state 118
	body_method : body_method rest .  (21)

	.  reduce 21


state 119
	exp_call : exp_stmt SEMICOLON .  (62)

	.  reduce 62


state 120
	unary_call : unary_stmts SEMICOLON .  (73)

	.  reduce 73


state 121
	otherwise_stmt : ELSE . $$11 LC_BRACE body RC_BRACE  (55)
	$$11 : .  (54)

	.  reduce 54

	$$11  goto 153


state 122
	cond_stmts : if_stmt otherwise_stmt .  (50)

	.  reduce 50


state 123
	calls : call_stmt_obj SEMICOLON .  (64)

	.  reduce 64


state 124
	calls : call_stmt SEMICOLON .  (65)

	.  reduce 65


state 125
	decls : DECLARATION RETURN_TYPE_FUNC dec SEMICOLON .  (56)

	.  reduce 56


state 126
	dec : dec COMMA . ID  (59)

	ID  shift 154
	.  error


state 127
	decls : DECLARATION ID dec SEMICOLON .  (57)

	.  reduce 57


state 128
	func_method : METHOD RETURN_TYPE_FUNC ID LSQ_BRACE ARGUMENTS RSQ_BRACE LP_BRACE args RP_BRACE $$3 . LC_BRACE body $$4 RC_BRACE  (11)

	LC_BRACE  shift 155
	.  error


state 129
	args : args COMMA arg .  (12)

	.  reduce 12


state 130
	if_stmt : IF LP_BRACE predicate . RP_BRACE $$10 DO LC_BRACE body RC_BRACE  (53)
	predicate : predicate . AND predicate  (76)
	predicate : predicate . OR predicate  (77)
	predicate : predicate . PREDICATE_OP predicate  (78)

	RP_BRACE  shift 156
	PREDICATE_OP  shift 145
	AND  shift 146
	OR  shift 147
	.  error


state 131
	loops : FOR LP_BRACE exp_stmt . SEMICOLON predicate SEMICOLON unary_stmts RP_BRACE $$8 LC_BRACE body RC_BRACE  (47)
	loops : FOR LP_BRACE exp_stmt . SEMICOLON predicate SEMICOLON RP_BRACE $$9 LC_BRACE body RC_BRACE  (49)

	SEMICOLON  shift 157
	.  error


state 132
	exp_stmt : EXPRESSION ID ASSIGN . predicate  (63)

	CALL_STMT  shift 51
	LP_BRACE  shift 90
	NEG  shift 91
	ADD  shift 92
	SUB  shift 93
	MUL  shift 94
	DIV  shift 95
	POSTINCR  shift 55
	POSTDECR  shift 56
	INTEGERS  shift 96
	ID  shift 97
	ARGUMENTS  shift 99
	TRUE_KEY  shift 100
	FALSE_KEY  shift 101
	STRING_TOKEN  shift 102
	CHAR_TOKEN  shift 103
	.  error

	predicate  goto 158
	unary_stmts  goto 105
	call_stmt_obj  goto 106
	call_stmt  goto 107
	extras  goto 108
	expr_pred  goto 109
	arth_pred  goto 110
	extrazz  goto 111

